[package]
name = "depict"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "depict"
path = "src/main.rs"

[dependencies]
json-builder-macro = "0.0.3"
rustc-demangle = "0.1.26"

# TODO only on x86 ?
sde-output-parser = { path = "sde-output-parser", version = "*" } 

# [target.unix.dependencies]
# perf-event-open = "0.4.2"
